# PCV

./: .gitignore  README.markdown
ex01/: CMakeLists.txt  README.markdown  createDoc.sh
ex01/src/main/doc/: PCV_2012_Ex01_Gruppe_a.tex  doc.tex
ex01/src/main/native/: pcv1.cpp
ex02/: CMakeLists.txt  build.sh  createDoc.sh  run.sh
ex02/src/main/doc/: doc.tex
ex02/src/main/native/: pcv2.cpp
ex03/: CMakeLists.txt  createDoc.sh  run.sh
ex03/src/main/doc/: doc.tex
ex03/src/main/native/: pcv3.cpp
ex03/src/main/resources/: Points.txt
ex05/: CMakeLists.txt  build.sh  createDoc.sh  run.sh
ex05/src/main/doc/: doc.tex
ex05/src/main/native/: pcv5.cpp
ex06/: build.sh  createDoc.sh  run.sh
ex06/src/main/doc/: doc.tex
ex06/src/main/native/: CMakeLists.txt  pcv6.cpp
