
PROJECT(pcv3)

CMAKE_MINIMUM_REQUIRED(VERSION 2.4)

SET(NATIVE_SRC_ROOT "src/main/native")

INCLUDE_DIRECTORIES(${NATIVE_SRC_ROOT})

SET(src_files
	"${NATIVE_SRC_ROOT}/pcv3.cpp"
	)

FIND_PACKAGE(OpenCV REQUIRED)
INCLUDE_DIRECTORIES(${OpenCV_INCLUDE_DIR})

ADD_EXECUTABLE(${CMAKE_PROJECT_NAME} ${src_files})
TARGET_LINK_LIBRARIES(${CMAKE_PROJECT_NAME} ${OpenCV_LIBS})

