
PROJECT(pcv6)

CMAKE_MINIMUM_REQUIRED(VERSION 2.4)

SET(CMAKE_BUILD_TYPE DEBUG)

SET(NATIVE_SRC_ROOT ".")

INCLUDE_DIRECTORIES(${NATIVE_SRC_ROOT})

SET(src_files
	"${NATIVE_SRC_ROOT}/pcv6.cpp"
	)

FIND_PACKAGE(OpenCV REQUIRED)
INCLUDE_DIRECTORIES(${OpenCV_INCLUDE_DIR})

ADD_EXECUTABLE(${CMAKE_PROJECT_NAME} ${src_files})
TARGET_LINK_LIBRARIES(${CMAKE_PROJECT_NAME} ${OpenCV_LIBS})

